# CircuitSimulator_MAI_JUK1

./: .gitignore  LICENSE  README.md  build.bat
src/: .clang-format  AutoDiffTest.cpp  CMakeLists.txt  Circuit Simulator Run Transistors.bat  CircuitSimulator.cpp  Config.ini  Format.bat  MatrixConfig.h.in  Run Benchmarks.bat  RunSimulatorMatlab.bat  build.bat  fft.cpp  gtest.txt  release build.bat  run - Copy.bat  run.bat  test.cpp
src/Datadumps/: Freq.m  FreqCopy.m  comp.m  transistor.m  transistorComparison.m
src/Matlab/: .gitignore  CPPVectFitAdaptor.m  Put vectfit3 in here.txt
src/Netlists/: CapacitorTest.netlist  Diode Test.netlist  Dynamic.netlist  FClass_Amplifier.netlist  FClass_Amplifier10G.netlist  FClass_Amplifier10G_DTIR.netlist  FClass_Amplifier10G_DTIR_Trunc.netlist  FClass_Amplifier10G_VF.netlist  FClass_Amplifier1GHz_DTIR.netlist  FClass_Amplifier1GHz_VF.netlist  FClass_Amplifier5GHz_DTIR.netlist  FClass_Amplifier5GHz_VF.netlist  ImpulseResponse.netlist  InductorTest.netlist  NMOSTest.netlist  Najm.netlist  Netlist Format.md  NonLinearC.netlist  NonLinearCapacitorTest.netlist  PNP Test - Copy.netlist  PNP Test.netlist  SParamStepTest.netlist  SParamStepTestVF.netlist  SParamTest.netlist  SParamTestCompMatch.netlist  SParamTestDTIRCap.netlist  SParamTestDTIRMatch.netlist  SParamTestS1P.netlist  SParamTestS1PDTIRCap.netlist  SParamTestS1PVFCap.netlist  SParamTestVF.netlist  SParamTestVFCap.netlist  SParamTestVFMatch.netlist  SParamTestVFRes.netlist  SParamVFTestS1P.netlist  StepNature.netlist  TimeSeriesTest.netlist  Transistor.netlist
src/Netlists/Benchmarks/NUDTIR/: 1GNUDTIR10.netlist  1GNUDTIR100.netlist  1GNUDTIR1000.netlist  1GNUDTIR10000.netlist  1GNUDTIR100000.netlist  1GNUDTIR50.netlist  1GNUDTIR500.netlist  1GNUDTIR5000.netlist  1GNUDTIR50000.netlist
src/Netlists/Benchmarks/VFRC/: 1GVFRC10.netlist  1GVFRC100.netlist  1GVFRC1000.netlist  1GVFRC10000.netlist  1GVFRC100000.netlist  1GVFRC50.netlist  1GVFRC500.netlist  1GVFRC5000.netlist  1GVFRC50000.netlist
src/PRR/: ChebyshevADS.PRR  ChebyshevADS20G20M.PRR  PRRFile format.md
src/S-Parameters/: Capacitor1p.s1p  Capacitor1p.s2p  ChebyshevADS.s1p  ChebyshevADS.s2p  ChebyshevADS20G20M.s2p  ChebyshevADSLonger.s1p  ChebyshevADSLonger.s2p  Resistor50.s2p  TransmissionLine.s2p  TransmissionLineBadSampling.s2p  filter.s1p  fractal_antenna.s1p  matchingSparam.s2p
src/TimeSeries/: .gitignore  Impulse.txt  Step.txt
src/includes/: matplotlibcpp.h
src/includes/CircuitElements/: BJT.hpp  Capacitor.hpp  CircuitElements.hpp  Component.hpp  CurrentSource.hpp  Diode.hpp  ElementsRegexBuilder.h  Inductor.hpp  NLCapacitor.hpp  NLCurrentSource.hpp  NLNMOS.hpp  Resistor.hpp  SParameterBlock.hpp  SParameterBlockVF.hpp  SinusoidalVoltageSource.hpp  TimeSeriesVoltageSource.hpp  VoltageSource.hpp
src/includes/CircuitSimulator/: Simulator.hpp
src/includes/Maths/: AutoDifferentiation.hpp  DynamicMatrix.hpp  ForceCausal.hpp  StaticMatrix.hpp  dft.hpp
src/src/CircuitElements/: ElementsRegexBuilder.cpp
